FIX overflow

--- a/src/styles/Home/Home.module.scss
+++ b/src/styles/Home/Home.module.scss
@@ -1,6 +1,7 @@
 .main {
   height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 .cTop {
   color: white;
